--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@auth/core": "^0.34.3",
     "@base-ui/react": "^1.0.0",
     "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
     "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
